--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,11 +1,18 @@
-.navbar
-{
+.navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-}
 
-.TPCIA-logo
-{
-    width: 5rem;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: larger;
+    text-decoration: none;
+
+    position: sticky;
+    top: 0;
+    z-index: 5;
+
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
 }
