--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -27,10 +27,10 @@ footer {
     font-size: larger;
     text-align: left;
 }
-p {
+.copyright-text {
     margin: 0;
 }
-a {
+.footer-link {
     text-decoration: none;
     color: black;
 }
