--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -16,3 +16,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 1rem;
 }
+.nav-link {
+    text-decoration: none;
+    color: black;
+}
